# Blocks

./: .gitignore  README.md  mkdocs.yml  project.toml  pyproject.toml  pyrightconfig.json  requirements.txt  serializable.py
blocks/: __init__.py  blocks.py  export.py  project.py
blocks/asset/: __init__.py
blocks/base/: __init__.py  baseBlock.py  block.py  btype.py  dataset.py  encoder.py  gate.py  graphics.py  node.py  organizer.py  prototype.py  register.py  signal.py  version.py  workflow.py
blocks/engine/: __init__.py  backend.py  env.py  envPy.py  environment.py  execute.py  graphic.py  installer.py  (+10 more)
cli/: __init__.py  session.py  utils.py
docs/: .plan.md  cli.md
examples/: configs.py  exemple_env.py  exemple_node.py  exemple_numpy.py  exemple_package.py  exemple_plugin.py  exemple_workflow.py
test/: test_blocks.py  test_graphics.py  test_node.py  test_prototype.py  test_workflow.py
tests/: _test_baseblock.py  _test_interface.py  configs.py  test_Block.py  test_baseBlock.py  test_baseblock.py  test_block.py  test_blocks.py  test_communication.py  test_cyclicgraph.py  test_datapacket.py  test_dataset.py  test_env.py  test_exec.py  test_file_manager.py  test_graph.py  test_graphics.py  test_interface.py  test_load.py  test_main.py  test_node.py  test_organizer.py  test_packages.py  test_project.py  test_prototype.py  test_serializable.py  test_serialize.py  test_version.py  test_workflow.py  test_workflow_2.py  version_changelog.md  version_info.json
tools/: encoder.py  load.py  organizer.py  serializable.py  serialize_json.py  serialize_pickle.py
(+53 files in other folders)
